Update TestThreads.java